fixed maze generator on mobile

--- a/maze-generator/style.css
+++ b/maze-generator/style.css
@@ -2,14 +2,18 @@ html,
 body {
 	margin: 0;
 	padding: 0;
+	font-family: Arial, sans-serif;
+	overflow: hidden;
+	overscroll-behavior: none;
 }
+
 canvas {
 	display: block;
 }
 
 .label-text {
-	margin: 0px;
-	font-size: 24px;
+	margin: 0;
+	font-size: 1.5rem;
 	color: white;
 }
 
@@ -17,19 +21,19 @@ canvas {
 	-webkit-appearance: none;
 	appearance: none;
 	width: 200px;
-	height: 6px;
+	height: 0.5rem;
 	background: #e0e0e0;
 	outline: none;
-	border-radius: 2px;
+	border-radius: 0.125rem;
 	transition: background 0.2s ease-in-out;
-	margin: 10px 0;
+	margin: 1rem 0;
 }
 
 .slider::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	appearance: none;
-	width: 24px;
-	height: 24px;
+	width: 1.5rem;
+	height: 1.5rem;
 	border-radius: 50%;
 	background: #eee;
 	cursor: pointer;
@@ -43,8 +47,8 @@ canvas {
 }
 
 .slider::-moz-range-thumb {
-	width: 24px;
-	height: 24px;
+	width: 1.5rem;
+	height: 1.5rem;
 	border-radius: 50%;
 	background: #bbb;
 	cursor: pointer;
@@ -54,4 +58,29 @@ canvas {
 
 .slider:hover::-moz-range-thumb {
 	background: #bbb;
+}
+
+@media (max-width: 1000px) {
+	.label-text {
+		font-size: 2.5rem;
+	}
+
+	.slider {
+		width: 40vw;
+		height: 0.8rem;
+	}
+
+	.slider::-webkit-slider-thumb {
+		width: 2.5rem;
+		height: 2.5rem;
+	}
+
+	.slider::-moz-range-thumb {
+		width: 2.5rem;
+		height: 2.5rem;
+	}
+
+	#controlPanel {
+		width: 90vw;
+	}
 }
